# jsoncrm

./: .gitignore  CNAME  README.md  index.html  package.json  pyproject.toml
src/: __init__.py  __main__.py  config.py  parsers.py  schema.py  server.py  server_ui.html  tool.py  utils.py
src/web/: app.js  crm.js  index.html  style.css
tests/: conftest.py  test_config.py  test_integration.py  test_parsers.py  test_schema.py  test_server.py  test_smoke.py  test_tool.py  test_utils.py
tests/fixtures/: .crm.json  competitors.json  customers.json  leads.json  prospects.json
tests/web/: crm.test.js
